<resources>
    <string name="app_name">TestApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phone_call">拨号</string>
    <string name="pop_notification">弹出一个通知</string>
    <string name="confirm_dialog">确定要退出该应用吗？</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="pop_toast">弹吐司</string>
    <string name="to_another_app">跳转至另一个APP的主页面</string>
    <string name="start_service">开启服务</string>
    <string name="bind_service">绑定本地服务</string>
    <string name="unbind_service">解绑本地服务</string>
    <string name="refresh_view">跳转至刷新页面</string>
    <string name="check_contacts">查看联系人信息</string>
    <string name="android">Android</string>
    <string name="empty_listview">No Item can be removed!</string>
    <string name="delete">删除</string>
    <string name="top">置顶</string>
    <string name="tag">标记已读</string>
    <string name="gradient">渐变色</string>
    <string name="layer_list">Layer-list</string>
    <string name="split_colon">:</string>
    <string name="round_rect">圆角矩形</string>
    <string name="circle">圆形</string>
    <string name="back">BACK</string>
    <string name="input">input...</string>
    <string name="tint">tint</string>
    <string name="love_inside">LOVE_INSIDE</string>
    <string name="account_number">账号</string>
    <string name="pass_word">密码</string>
    <string name="account_hint">用户名/手机号/邮箱</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="welcome">欢迎：</string>
    <string name="quit_login">退出登录</string>
    <string name="file_list">本机Tomcat所具有的所有图片资源:</string>
    <string name="net_work_abnormal">网络异常</string>
    <string name="no_imgs_resource">没有图片资源</string>
    <string name="preview">预览</string>
    <string name="download">下载</string>

    <!--spinner的列表数据-->
    <string-array name="spinner_list">
        <item name="C">C</item>
        <item name="C++">C++</item>
        <item name="Java">Java</item>
        <item name="C#">C#</item>
        <item name="R">R</item>
    </string-array>
</resources>
