<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bt_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_call"
        style="@style/button_style"/>
    <Button
        android:id="@+id/bt_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_notification"
        style="@style/button_style"/>
    <Button
        android:id="@+id/bt_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_dialog"
        style="@style/button_style"/>
    <Button
        android:id="@+id/bt_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_toast"
        style="@style/button_style"/>

    <Button
        android:id="@+id/bt_another_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_another_app"
        style="@style/button_style"/>
</LinearLayout>