<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/ll_drag"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center_vertical">
    <TextView
        style="@style/drag_text"
        android:id="@+id/tv_delete"
        android:layout_weight="1"
        android:text="@string/delete"
        android:background="@color/red" />
    <TextView
        style="@style/drag_text"
        android:id="@+id/tv_top"
        android:layout_weight="1"
        android:text="@string/top"
        android:background="@color/blue" />
    <TextView
        style="@style/drag_text"
        android:id="@+id/tv_tab"
        android:layout_weight="2"
        android:text="@string/tag"
        android:background="@color/purple"/>
</LinearLayout>
