<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tint"
        android:background="@color/white"
        android:backgroundTint="@color/pink"
        android:textSize="20sp"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/et_tint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/green"
        android:hint="@string/input"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="30dp"
        card_view:cardElevation="3dp">
        <ImageView
            android:id="@+id/iv_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/love_center"
            android:tint="@color/blue"
            android:tintMode="multiply"
            android:scaleType="fitXY"/>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/bt_round_rect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_rect"/>
        <Button
            android:id="@+id/bt_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circle"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_inside"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:elevation="2dp"
        android:padding="5dp" />

</LinearLayout>