<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textColor="@color/purple"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_list"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="10dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/shade_1"
        android:layout_margin="10dp">
        <ViewStub
            android:id="@+id/view_stub_success"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout="@layout/view_stub_success"/>
        <ViewStub
            android:id="@+id/view_stub_fail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout="@layout/view_stub_fail"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/login_button"
            android:id="@+id/bt_preview"
            android:text="@string/preview"/>
        <Button
            style="@style/login_button"
            android:id="@+id/bt_download"
            android:text="@string/download"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"/>

</LinearLayout>