<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myCircle="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:singleLine="true"
        android:autoLink="all"
        android:linksClickable="true"
        android:textColorLink="@color/red"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="back"
            android:textSize="20sp"/>
        <com.tcl.example.xie.dejun.diyview.MyCircle
            android:id="@+id/myCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            myCircle:rotation="60"
            android:background="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="007"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shade_1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/bt_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="next"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
    <Button
        android:id="@+id/bt_start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        style="@style/button_style"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:progress="30"
        android:secondaryProgress="40"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:background="@drawable/progress_selector"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
    <Button
        android:id="@+id/bt_bind_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bind_service"
        style="@style/button_style"/>
    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.DeviceDefault.RatingBar.Indicator"
        android:numStars="5"
        android:rating="3"
        android:stepSize="0.5"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <Button
            android:id="@+id/bt_unbind_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unbind_service"
            style="@style/button_style"/>
        <com.tcl.example.xie.dejun.diyview.RectTextView
            android:id="@+id/re_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/android"
            android:textSize="20sp"/>
    </LinearLayout>


    <!--<Button
        android:id="@+id/bt_refresh_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/refresh_view"
        style="@style/button_style"
        android:layout_weight="1" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/bt_check_contacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check_contacts"
        style="@style/button_style"
        android:layout_weight="1" />-->

</LinearLayout>