<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/shade_1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gradient"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shade_2"/>
        <View
            android:id="@+id/circle_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shade_3"/>
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:background="@drawable/shade_4"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp">-->
        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="40dp"-->
            <!--android:text="@string/layer_list"-->
            <!--android:textSize="30sp"-->
            <!--android:layout_gravity="center"-->
            <!--android:gravity="center"-->
            <!--android:background="@drawable/selector_1"-->
            <!--android:layout_marginLeft="10dp"/>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <com.tcl.example.com.tcl.dejun.xie.xmlResource.RunningClock
            android:id="@+id/running_clock"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/lv_hour_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:divider="@null"/>
        <ListView
            android:id="@+id/lv_minute_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:divider="@null"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/bt_confirm"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/confirm"
                android:textSize="26sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>
            <!--<Button
                android:id="@+id/bt_cancel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/cancel"
                android:textSize="26sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp">
                <TextView
                    android:id="@+id/time_1"
                    style="@style/digit_time"/>
                <TextView
                    android:id="@+id/time_2"
                    style="@style/digit_time"/>
                <TextView
                    android:id="@+id/time_split"
                    style="@style/digit_time"
                    android:textColor="@color/black"
                    android:text="@string/split_colon"/>
                <TextView
                    android:id="@+id/time_3"
                    style="@style/digit_time"/>
                <TextView
                    android:id="@+id/time_4"
                    style="@style/digit_time"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>